--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore everything in this directory
-build/**
-wasmlabs-build-output/**
+build-output/**
+build-staging/**
+.vscode/**
+*.log
 # Except this file
 !.gitignore
