feat: add common build environment
Add a build environment based on container images that can reproduce
the build in multiple environments.

Signed-off-by: Rafael Fernández López <rfernandezl@vmware.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-# Ignore everything in this directory
-build-output/**
-build-staging/**
+# Ignore everything in these directories
+build-output
+build-staging
 .vscode/**
 *.log
 # Except this file
