--- a/.github/workflows/build-php.yaml
+++ b/.github/workflows/build-php.yaml
@@ -19,8 +19,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Build PHP
         run: make php/php-${{ matrix.version }}
+      - name: Rename artifacts
+        shell: bash
+        run: |
+          sudo mv php/build-output/php/php-${{ matrix.version }}/bin/php-cgi{,-${{ matrix.version }}.wasm}
       - name: Upload php-cgi-${{ matrix.version }}.wasm artifact
         uses: actions/upload-artifact@v3
         with:
           name: php-cgi-${{ matrix.version }}.wasm
-          path: php/build-output/php/php-${{ matrix.version }}/bin/php-cgi
+          path: php/build-output/php/php-${{ matrix.version }}/bin/php-cgi-${{ matrix.version }}.wasm
