--- a/.github/workflows/build-php.yaml
+++ b/.github/workflows/build-php.yaml
@@ -12,19 +12,47 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [7.3.33, 7.4.32]
+        # TODO (ereslibre): the PHP cli is conditionally compiled
+        # because it has the ability to open a listening socket-- only
+        # supported on wasmedge --. Remove build-php-cli from here and
+        # make the PHP CLI conditionally compile local server code out
+        # on all versions.
+        include:
+          - name: wasmedge-php
+            suffix: -wasmedge
+            build-php-cli: true
+            version: 7.4.32
+          - name: php
+            suffix: ""
+            build-php-cli: false
+            version: 7.3.33
+          - name: php
+            suffix: ""
+            build-php-cli: false
+            version: 7.4.32
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Build PHP
-        run: make php/php-${{ matrix.version }}
+        run: make php/${{ matrix.name }}-${{ matrix.version }}
       - name: Rename artifacts
         shell: bash
         run: |
-          sudo mv php/build-output/php/php-${{ matrix.version }}/bin/php-cgi{,-${{ matrix.version }}.wasm}
-      - name: Upload php-cgi-${{ matrix.version }}.wasm artifact
+          sudo mv php/build-output/php/php-${{ matrix.version }}/bin/php-cgi{${{ matrix.suffix }},-${{ matrix.version }}${{ matrix.suffix }}.wasm}
+      - name: Rename artifacts
+        shell: bash
+        if: ${{ matrix.build-php-cli }}
+        run: |
+          sudo mv php/build-output/php/php-${{ matrix.version }}/bin/php{${{ matrix.suffix }},-${{ matrix.version }}${{ matrix.suffix }}.wasm}
+      - name: Upload php-${{ matrix.version }}${{ matrix.suffix }}.wasm artifact
+        uses: actions/upload-artifact@v3
+        if: ${{ matrix.build-php-cli }}
+        with:
+          name: php-${{ matrix.version }}${{ matrix.suffix }}.wasm
+          path: php/build-output/php/php-${{ matrix.version }}/bin/php-${{ matrix.version }}${{ matrix.suffix }}.wasm
+      - name: Upload php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm artifact
         uses: actions/upload-artifact@v3
         with:
-          name: php-cgi-${{ matrix.version }}.wasm
-          path: php/build-output/php/php-${{ matrix.version }}/bin/php-cgi-${{ matrix.version }}.wasm
+          name: php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm
+          path: php/build-output/php/php-${{ matrix.version }}/bin/php-cgi-${{ matrix.version }}${{ matrix.suffix }}.wasm
