--- a/.github/workflows/release-php.yaml
+++ b/.github/workflows/release-php.yaml
@@ -31,6 +31,14 @@ jobs:
             suffix: ""
             build-php-cli: false
             version: 7.4.32
+          - name: php
+            suffix: ""
+            build-php-cli: false
+            version: 8.1.11
+          - name: php
+            suffix: ""
+            build-php-cli: false
+            version: 8.2.0
     runs-on: ubuntu-latest
     env:
       BINARYEN_VERSION: 111
