--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -2,6 +2,8 @@ FROM ubuntu:latest@sha256:4b1d0c4a2d2aaf63b37111f34eb9fa89fa1bf53dd6e4ca954d47ca
 ARG WASI_SDK_VERSION=16
 ENV WASI_SDK=wasi-sdk-${WASI_SDK_VERSION}
 ENV WASI_SDK_ROOT=/wasi-sdk
+ARG BINARYEN_VERSION=111
+ENV BINARYEN_ROOT=/binaryen
 RUN apt update && \
       DEBIAN_FRONTEND=noninteractive apt install -y \
         autoconf \
@@ -15,5 +17,9 @@ RUN wget https://github.com/WebAssembly/wasi-sdk/releases/download/${WASI_SDK}/$
       mkdir /wasi-sdk && \
       tar xf ${WASI_SDK}.0-linux.tar.gz --strip-components=1 -C ${WASI_SDK_ROOT} && \
       rm ${WASI_SDK}.0-linux.tar.gz
+RUN wget https://github.com/WebAssembly/binaryen/releases/download/version_${BINARYEN_VERSION}/binaryen-version_${BINARYEN_VERSION}-x86_64-linux.tar.gz && \
+      mkdir /binaryen && \
+      tar xf binaryen-version_${BINARYEN_VERSION}-x86_64-linux.tar.gz --strip-components=1 -C ${BINARYEN_ROOT} && \
+      rm binaryen-version_${BINARYEN_VERSION}-x86_64-linux.tar.gz
 ADD . /wlr
 WORKDIR /wlr
