--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,4 @@
-ARG WASI_SDK_VERSION=19
+ARG WASI_SDK_VERSION
 FROM ghcr.io/vmware-labs/wasi-builder:${WASI_SDK_VERSION}
 RUN DEBIAN_FRONTEND=noninteractive apt install -y \
       bison \
