--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -1,6 +1,6 @@
-ARG WASM_BASE=20220116
+ARG WASM_BASE
 FROM ghcr.io/vmware-labs/wasm-base:${WASM_BASE}
-ARG WASI_SDK_VERSION=19
+ARG WASI_SDK_VERSION
 ENV WASI_SDK=wasi-sdk-${WASI_SDK_VERSION}
 ENV WASI_SDK_ROOT=/wasi-sdk
 ENV WASI_SDK_PATH=${WASI_SDK_ROOT}
