--- a/python/Makefile
+++ b/python/Makefile
@@ -1,11 +1,12 @@
-WASI_SDK_VERSION ?= 19
+WASI_SDK_VERSION ?= 16
+# NOTE - the default python build is failing with wasi-sdk-19
 
 ROOT_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 include ../Makefile.builders
 
 .PHONY: python-builder
-python-builder: wasi-builder-19
+python-builder: wasi-builder-16
 	docker build -f ${ROOT_DIR}/Dockerfile --build-arg WASI_SDK_VERSION=$(WASI_SDK_VERSION) -t ghcr.io/vmware-labs/python-builder:wasi-$(WASI_SDK_VERSION) ${ROOT_DIR}
 
 .PHONY: v*
