chore: fix building on darwin M1
Explicitly specify the platform when building and running build
containers.

--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -1,5 +1,5 @@
 ARG WASM_BASE
-FROM ghcr.io/vmware-labs/wasm-base:${WASM_BASE}
+FROM wasm-base:${WASM_BASE}
 ARG WASI_SDK_VERSION
 ENV WASI_SDK=wasi-sdk-${WASI_SDK_VERSION}
 ENV WASI_SDK_ROOT=/wasi-sdk
