--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -1,5 +1,5 @@
 ARG WASI_SDK_VERSION
-FROM wasi-builder:${WASI_SDK_VERSION}
+FROM ghcr.io/vmware-labs/wasmlabs/wasi-builder:${WASI_SDK_VERSION}
 RUN DEBIAN_FRONTEND=noninteractive apt install -y \
       ruby \
       bison \
