feat: Move out wasmedge_socket_stubs from PHP patch to separate library
To build just run `./wl-build.sh libs-internal/wasmedge_sock`

--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -9,6 +9,7 @@ RUN apt update && \
         autoconf \
         automake \
         build-essential \
+        cmake \
         clang \
         git \
         pkg-config
