--- a/Dockerfile.wasi-builder
+++ b/Dockerfile.wasi-builder
@@ -4,6 +4,7 @@ ARG WASI_SDK_VERSION
 ENV WASI_SDK=wasi-sdk-${WASI_SDK_VERSION}
 ENV WASI_SDK_ROOT=/wasi-sdk
 ENV WASI_SDK_PATH=${WASI_SDK_ROOT}
+ENV WABT_ROOT=/wabt
 RUN apt update && \
       DEBIAN_FRONTEND=noninteractive apt install -y \
         autoconf \
@@ -14,8 +15,12 @@ RUN apt update && \
         git \
         pkg-config
 RUN wget https://github.com/WebAssembly/wasi-sdk/releases/download/${WASI_SDK}/${WASI_SDK}.0-linux.tar.gz && \
-      mkdir /wasi-sdk && \
+      mkdir ${WASI_SDK_ROOT} && \
       tar xf ${WASI_SDK}.0-linux.tar.gz --strip-components=1 -C ${WASI_SDK_ROOT} && \
       rm ${WASI_SDK}.0-linux.tar.gz
+RUN wget https://github.com/WebAssembly/wabt/releases/download/1.0.32/wabt-1.0.32-ubuntu.tar.gz && \
+      mkdir ${WABT_ROOT} && \
+      tar xf wabt-1.0.32-ubuntu.tar.gz --strip-components=1 -C ${WABT_ROOT} && \
+      rm wabt-1.0.32-ubuntu.tar.gz
 ADD . /wlr
 WORKDIR /wlr
