--- a/php/Makefile
+++ b/php/Makefile
@@ -13,6 +13,11 @@ php-*: php-builder
 	mkdir -p build-output build-staging
 	docker run --platform linux/amd64 --rm -e WASMLABS_RUNTIME -v ${ROOT_DIR}/build-output:/wlr/build-output -v ${ROOT_DIR}/build-staging:/wlr/build-staging ghcr.io/vmware-labs/wasmlabs/php-builder:wasi-${WASI_SDK_VERSION} ./wl-make.sh php/$@
 
+.PHONY: master
+master: php-builder
+	mkdir -p build-output build-staging
+	docker run --platform linux/amd64 --rm -e WASMLABS_RUNTIME -v ${ROOT_DIR}/build-output:/wlr/build-output -v ${ROOT_DIR}/build-staging:/wlr/build-staging ghcr.io/vmware-labs/wasmlabs/php-builder:wasi-${WASI_SDK_VERSION} ./wl-make.sh php/$@
+
 .PHONY: clean
 clean:
 	rm -rf build-output build-staging
