fix: Python path to lib-dyn. Release python-wasmedge
Removes the 'Could not find platform independent/dependent libraries' warnings

--- a/.github/workflows/release-python.yaml
+++ b/.github/workflows/release-python.yaml
@@ -31,6 +31,13 @@ jobs:
         # supported by GitHub (https://github.com/community/community/discussions/37883)
         if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
         run: make python/v${{ matrix.version }}
+      - name: Build Python Wasmedge
+        # Only run for the Python version specified in the git tag.
+        #
+        # This if could be moved to the parent `job` section when it's
+        # supported by GitHub (https://github.com/community/community/discussions/37883)
+        if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
+        run: make python/wasmedge-v${{ matrix.version }}
       - name: Rename release artifacts
         # Only run for the Python version specified in the git tag.
         #
@@ -40,6 +47,7 @@ jobs:
         shell: bash
         run: |
           sudo mv python/build-output/python/v${{ matrix.version }}/bin/python{,-${{ matrix.version }}}.wasm
+          sudo mv python/build-output/python/v${{ matrix.version }}/bin/python{,-${{ matrix.version }}}-wasmedge.wasm
       - name: Bundle Python with standard libraries
         # Only run for the Python version specified in the git tag.
         #
@@ -48,7 +56,7 @@ jobs:
         if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
         run: |
           pushd python/build-output/python/v${{ matrix.version }}
-          sudo zip -qq -r python-aio-${{ matrix.version }}.zip bin/python-${{ matrix.version }}.wasm usr
+          sudo zip -qq -r python-aio-${{ matrix.version }}.zip bin usr
           popd
       - name: Create release
         # Only run for the Python version specified in the git tag.
