fix: Fixes GH Actions for `php-8.2.0-slim`

--- a/.github/workflows/build-php.yaml
+++ b/.github/workflows/build-php.yaml
@@ -48,15 +48,15 @@ jobs:
         uses: actions/checkout@v3
       - name: Build PHP
         run: make php/${{ matrix.name }}${{ matrix.version }}${{ matrix.suffix }}
-      - name: Rename artifacts
+      - name: Rename `php-cgi.wasm` binary (adding version and flavor)
         shell: bash
         run: |
-          sudo mv php/build-output/php/php-${{ matrix.version }}/bin/php-cgi{${{ matrix.suffix }},-${{ matrix.version }}${{ matrix.suffix }}}.wasm
-      - name: Rename artifacts
+          sudo mv php/build-output/php/php-${{ matrix.version }}${{ matrix.suffix }}/bin/php-cgi{,-${{ matrix.version }}${{ matrix.suffix }}}.wasm
+      - name: Rename `php.wasm` binary (CLI) (adding version and flavor)
         shell: bash
         if: ${{ matrix.build-php-cli }}
         run: |
-          sudo mv php/build-output/php/php-${{ matrix.version }}/bin/php{${{ matrix.suffix }},-${{ matrix.version }}${{ matrix.suffix }}}.wasm
+          sudo mv php/build-output/php/php-${{ matrix.version }}${{ matrix.suffix }}/bin/php{,-${{ matrix.version }}${{ matrix.suffix }}}.wasm
       - name: Upload php-${{ matrix.version }}${{ matrix.suffix }}.wasm artifact
         uses: actions/upload-artifact@v3
         if: ${{ matrix.build-php-cli }}
