--- a/.github/workflows/release-python.yaml
+++ b/.github/workflows/release-python.yaml
@@ -38,6 +38,13 @@ jobs:
         # supported by GitHub (https://github.com/community/community/discussions/37883)
         if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
         run: make python/wasmedge-v${{ matrix.version }}
+      - name: Build Python AIO
+        # Only run for the Python version specified in the git tag.
+        #
+        # This if could be moved to the parent `job` section when it's
+        # supported by GitHub (https://github.com/community/community/discussions/37883)
+        if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
+        run: make python/aio-v${{ matrix.version }}
       - name: Rename release artifacts
         # Only run for the Python version specified in the git tag.
         #
@@ -48,6 +55,7 @@ jobs:
         run: |
           sudo mv build-output/python/v${{ matrix.version }}/bin/python{,-${{ matrix.version }}}.wasm
           sudo mv build-output/python/v${{ matrix.version }}/bin/python{,-${{ matrix.version }}}-wasmedge.wasm
+          sudo mv build-output/python/v${{ matrix.version }}-aio/bin/python{,-${{ matrix.version }}}-aio.wasm
       - name: Bundle Python with standard libraries
         # Only run for the Python version specified in the git tag.
         #
@@ -56,7 +64,7 @@ jobs:
         if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
         run: |
           pushd build-output/python/v${{ matrix.version }}
-          sudo zip -qq -r python-aio-${{ matrix.version }}.zip bin usr
+          sudo zip -qq -r python-${{ matrix.version }}.zip bin usr
           popd
       - name: Create release
         # Only run for the Python version specified in the git tag.
@@ -78,7 +86,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            build-output/python/v${{ matrix.version }}/python-aio-${{ matrix.version }}.zip
+            build-output/python/v${{ matrix.version }}/python-${{ matrix.version }}.zip \
+            build-output/python/v${{ matrix.version }}-aio/bin/python{,-${{ matrix.version }}}-aio.wasm
       - name: Generate release assets digests
         # Only run for the Python version specified in the git tag.
         #
@@ -88,7 +97,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for asset in build-output/python/v${{ matrix.version }}/python-aio-${{ matrix.version }}.zip; do
+          for asset in build-output/python/v${{ matrix.version }}/python-${{ matrix.version }}.zip; do
+            sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
+          done
+          for asset in build-output/python/v${{ matrix.version }}-aio/bin/*; do
             sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
           done
       - name: Append release assets digests
@@ -101,5 +113,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            build-output/python/v${{ matrix.version }}/python-aio-${{ matrix.version }}.zip.sha256sum
-
+            build-output/python/v${{ matrix.version }}/python-${{ matrix.version }}.zip.sha256sum \
+            build-output/python/v${{ matrix.version }}-aio/bin/python{,-${{ matrix.version }}}-aio.wasm.sha256sum
