--- a/.github/workflows/release-python.yaml
+++ b/.github/workflows/release-python.yaml
@@ -38,6 +38,20 @@ jobs:
         # supported by GitHub (https://github.com/community/community/discussions/37883)
         if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
         run: make python/wasmedge-v${{ matrix.version }}
+      - name: Build Python AIO
+        # Only run for the Python version specified in the git tag.
+        #
+        # This if could be moved to the parent `job` section when it's
+        # supported by GitHub (https://github.com/community/community/discussions/37883)
+        if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
+        run: make python/aio-v${{ matrix.version }}
+      - name: Build Python AIO Wasmedge
+        # Only run for the Python version specified in the git tag.
+        #
+        # This if could be moved to the parent `job` section when it's
+        # supported by GitHub (https://github.com/community/community/discussions/37883)
+        if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
+        run: make python/aio-wasmedge-v${{ matrix.version }}
       - name: Rename release artifacts
         # Only run for the Python version specified in the git tag.
         #
@@ -47,7 +61,9 @@ jobs:
         shell: bash
         run: |
           sudo mv build-output/python/v${{ matrix.version }}/bin/python{,-${{ matrix.version }}}.wasm
-          sudo mv build-output/python/v${{ matrix.version }}/bin/python{,-${{ matrix.version }}}-wasmedge.wasm
+          sudo mv build-output/python/v${{ matrix.version }}-wasmedge/bin/python{,-${{ matrix.version }}-wasmedge}.wasm
+          sudo mv build-output/python/v${{ matrix.version }}-aio/bin/python{,-${{ matrix.version }}}.wasm
+          sudo mv build-output/python/v${{ matrix.version }}-aio-wasmedge/bin/python{,-${{ matrix.version }}-wasmedge}.wasm
       - name: Bundle Python with standard libraries
         # Only run for the Python version specified in the git tag.
         #
@@ -55,9 +71,14 @@ jobs:
         # supported by GitHub (https://github.com/community/community/discussions/37883)
         if: startsWith(github.event.ref, format('refs/tags/python/{0}+', matrix.version))
         run: |
-          pushd build-output/python/v${{ matrix.version }}
-          sudo zip -qq -r python-aio-${{ matrix.version }}.zip bin usr
-          popd
+          tar -cvf python-${{ matrix.version }}.tar \
+            -C build-output/python/v${{ matrix.version }}/ \
+            bin/python-${{ matrix.version }}.wasm \
+            usr
+          tar -rvf python-${{ matrix.version }}.tar \
+            -C build-output/python/v${{ matrix.version }}-wasmedge/ \
+            bin/python-${{ matrix.version }}-wasmedge.wasm
+          gzip python-${{ matrix.version }}.tar
       - name: Create release
         # Only run for the Python version specified in the git tag.
         #
@@ -78,7 +99,9 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            build-output/python/v${{ matrix.version }}/python-aio-${{ matrix.version }}.zip
+            python-${{ matrix.version }}.tar.gz \
+            build-output/python/v${{ matrix.version }}-aio/bin/python-${{ matrix.version }}.wasm \
+            build-output/python/v${{ matrix.version }}-aio-wasmedge/bin/python-${{ matrix.version }}-wasmedge.wasm
       - name: Generate release assets digests
         # Only run for the Python version specified in the git tag.
         #
@@ -88,7 +111,11 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for asset in build-output/python/v${{ matrix.version }}/python-aio-${{ matrix.version }}.zip; do
+          for asset in \
+              python-${{ matrix.version }}.tar.gz \
+              build-output/python/v${{ matrix.version }}-aio/bin/python-${{ matrix.version }}.wasm \
+              build-output/python/v${{ matrix.version }}-aio-wasmedge/bin/python-${{ matrix.version }}-wasmedge.wasm; \
+          do
             sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
           done
       - name: Append release assets digests
@@ -101,5 +128,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            build-output/python/v${{ matrix.version }}/python-aio-${{ matrix.version }}.zip.sha256sum
-
+            python-${{ matrix.version }}.tar.gz.sha256sum \
+            build-output/python/v${{ matrix.version }}-aio/bin/python-${{ matrix.version }}.wasm.sha256sum \
+            build-output/python/v${{ matrix.version }}-aio-wasmedge/bin/python-${{ matrix.version }}-wasmedge.wasm.sha256sum
