--- a/.github/workflows/release-ruby.yaml
+++ b/.github/workflows/release-ruby.yaml
@@ -13,6 +13,7 @@ jobs:
   release-ruby:
     strategy:
       matrix:
+        flavor: ["", "-slim"]
         include:
           - version: 3.2.0
             target_version: 3_2_0
@@ -31,7 +32,7 @@ jobs:
         # This if could be moved to the parent `job` section when it's
         # supported by GitHub (https://github.com/community/community/discussions/37883)
         if: startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))
-        run: make ruby/v${{ matrix.target_version }}
+        run: make ruby/v${{ matrix.target_version }}${{ matrix.flavor }}
       - name: Rename release artifacts
         # Only run for the Ruby version specified in the git tag.
         #
@@ -40,7 +41,7 @@ jobs:
         if: startsWith(github.event.ref, format('refs/tags/ruby/{0}+', matrix.version))
         shell: bash
         run: |
-          sudo mv build-output/ruby/v${{ matrix.target_version }}/bin/ruby{,-${{ matrix.version }}}.wasm
+          sudo mv build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/ruby{,-${{ matrix.version }}${{ matrix.flavor }}}.wasm
       - name: Create release
         # Only run for the Ruby version specified in the git tag.
         #
@@ -61,7 +62,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            build-output/ruby/v${{ matrix.target_version }}/bin/*.wasm
+            build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/*.wasm
       - name: Generate release assets digests
         # Only run for the Ruby version specified in the git tag.
         #
@@ -71,7 +72,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for asset in build-output/ruby/v${{ matrix.target_version }}/bin/*.wasm; do
+          for asset in build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/*.wasm; do
             sha256sum "$asset" | sudo tee "$asset.sha256sum" > /dev/null
           done
       - name: Append release assets digests
@@ -84,4 +85,4 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ github.ref_name }} \
-            build-output/ruby/v${{ matrix.target_version }}/bin/*.sha256sum
+            build-output/ruby/v${{ matrix.target_version }}${{ matrix.flavor }}/bin/*.sha256sum
